--- a/index.html
+++ b/index.html
@@ -33,14 +33,11 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Portfolio De Arame Gueye </h1>
+ 								<h2>Portfolio</h2>
 							</header>
 							<div class="content">
-								<p>Je suis une analyste de données dédiée qui rassemble, nettoie et évaluedes ensembles de données pour répondre à des questions ou résoudre des problèmes.<br />
+								
 									</p>
-								<ul class="actions">
-									
-								</ul>
 							</div>
 						</div>
 					</section>
@@ -55,7 +52,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ArameGueye10/etude-de-sante-publique" class="link">Etude de Sante Publique avec Python</a></h3>
+										<h3><a href="https://nbviewer.org/github/ArameGueye10/etude-de-sante-publique/blob/a760a0420c09decf2113a12ddc8064dbcc4a88f5/Projet4.ipynb" class="link">Etude de Sante Publique</a></h3>
+										<h4><a>Projet sous Python</a></h4>
 										<p>Utiliser des librairies spécialisées pour les traitements data
 											Créer un environnement de développement
 											Manipuler des DataFrames</p>
@@ -66,7 +64,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ArameGueye10/Optimisez-la-gestion-des-donnees-d-une-boutique" class="link">Optimisez la gestion des données d'une boutique avec Python</a></h3>
+										<h3><a href="https://nbviewer.org/github/ArameGueye10/Optimisez-la-gestion-des-donnees-d-une-boutique/blob/9453f836bb8d1e4e75de8a87fdab3fcb18429a64/Projet5.ipynb" class="link">Optimisation de la gestion des données d'un commerce de vin</a></h3>
+										<h4><a>Projet sous Python</a></h4>
 										<p>Gérer les erreurs et les incohérences présentes sur des données stockées
 											Classifier différents types de données
 											Réaliser une analyse univariée pour interpréter des données</p>
@@ -77,7 +76,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ArameGueye10/Analysez-les-ventes-d-une-librairie-" class="link">Analysez les ventes d'une librairie avec Python</a></h3>
+										<h3><a href="https://nbviewer.org/github/ArameGueye10/Analysez-les-ventes-d-une-librairie-/blob/6b8f5aa9ca2ec5c7a6a4404d4ea532e61c401320/PROJET%206.ipynb" class="link">Analyse des ventes d'une librairie</a></h3>
+										<h4><a>Projet sous Python</a></h4>
 										<p>Réaliser un test statistique
 											Réaliser une analyse bivariée pour interpréter des données
 											Analyser des séries temporelles</p>
@@ -88,7 +88,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ArameGueye10/Analysez-des-indicateurs-de-l-egalit-femme-homme-avec-Knime" class="link">Analysez des indicateurs de l'égalité femme-homme avec Knime</a></h3>
+										<h3><a href="https://github.com/ArameGueye10/Analysez-des-indicateurs-de-l-egalit-femme-homme-avec-Knime" class="link">Analyse des indicateurs de l'égalité femme-homme</a></h3>
+										<h4><a>Projet sous Knime</a></h4>
 										<p>Transférer des données vers une zone de préparation
 											Collecter des données en respectant le RGPD
 											Préparer des données pour l'analyse en respectant les normes internes à l’entreprise</p>
@@ -99,7 +100,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://public.tableau.com/app/profile/aramegueye/viz/Etudesurleaupotable_16571213774300/Histoire2" class="link">Faites une étude sur l'eau potable avec Tableau</a></h3>
+										<h3><a href="https://public.tableau.com/app/profile/aramegueye/viz/Etudesurleaupotable_16571213774300/Histoire2" class="link">Realisation d'une étude sur l'eau potable sur des données Insee</a></h3>
+										<h4><a>Projet sous Tableau</a></h4>
 										<p>Générer des graphiques adaptés aux types de données
 											Synthétiser des résultats à destination d'un client
 											Créer un tableau de bord répondant à des questions analytiques
@@ -111,7 +113,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ArameGueye10/Produisez-une-etude-de-marche" class="link">Produisez une étude de marché avec Python</a></h3>
+										<h3><a href="https://nbviewer.org/github/ArameGueye10/Produisez-une-etude-de-marche/blob/7092e8b18fe2f5702d727c48e8b92b079b317835/LIVRABLE%20P%209.ipynb" class="link">Production d'une étude de marché</a></h3>
+										<h4><a>Projet sous Python</a></h4>
 										<p>Effectuer un clustering simple
 											Explorer des données pour synthétiser des variables</p>
 									</header>
@@ -121,7 +124,9 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ArameGueye10/Detectez-des-faux-billets" class="link">Détectez des faux billets avec Python</a></h3>
+										<h3><a href="https://nbviewer.org/github/ArameGueye10/Detectez-des-faux-billets/blob/019bbaee2da98b113ff27aeac61096b176f5c07f/Gueye_Arame_10_D%C3%A9tectez_des_faux_billets_082022%20.ipynb" class="link">Détection de faux billets</a></h3>
+										<h3><a href="https://nbviewer.org/github/ArameGueye10/Detectez-des-faux-billets/blob/019bbaee2da98b113ff27aeac61096b176f5c07f/L%27Application%20Finale.ipynb" class="link">Application Finale</a></h3>
+										<h4><a>Projet sous Python</a></h4>
 										<p>Réaliser une analyse prédictive
 											Réaliser une régression logistique
 											Réaliser une régression linéaire
@@ -133,7 +138,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ArameGueye10/Creez-et-utilisez-une-base-de-donnees-immobiliere-avec-SQL" class="link">Créez et utilisez une base de données immobilière avec SQL</a></h3>
+										<h3><a href="https://github.com/ArameGueye10/Creez-et-utilisez-une-base-de-donnees-immobiliere-avec-SQL" class="link">Création et Utilisation d'une base de données immobilière</a></h3>
+										<h4><a>Projet sous PostgreSQL</a></h4>
 										<p>Créer des tables dans une base de données
 											Effectuer des requêtes SQL pour répondre à une problématique métier
 											Mettre à jour un catalogue de données
