--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://nbviewer.org/github/ArameGueye10/Detectez-des-faux-billets/blob/019bbaee2da98b113ff27aeac61096b176f5c07f/Gueye_Arame_10_D%C3%A9tectez_des_faux_billets_082022%20.ipynb" class="link">Détection de faux billets</a></h3>
-										<h3><a href="https://nbviewer.org/github/ArameGueye10/ApplicationFinale/blob/b3e93ddbf60a8d327fba2f2100b4c780390f4d38/L%27Application%20Finale.ipynb" class="link">Application Finale</a></h3>
+										<h3><a href="https://nbviewer.org/github/ArameGueye10/ApplicationFinale/blob/b3e93ddbf60a8d327fba2f2100b4c780390f4d38/L%27Application%20Finale.ipynb" class="link">Application Finale de détection de faux billets</a></h3>
 										<h4><a>Projet sous Python</a></h4>
 										<p>Réaliser une analyse prédictive
 											Réaliser une régression logistique
