--- a/index.html
+++ b/index.html
@@ -137,6 +137,13 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
+									<header class="major"
+										<h3><a href="https://nbviewer.org/github/ArameGueye10/ApplicationFinale/blob/b3e93ddbf60a8d327fba2f2100b4c780390f4d38/L%27Application%20Finale.ipynb" class="link">Application Finale de détection de faux billets</a></h3>
+										<h4><a>Projet sous Python</a></h4>
+										<p></p>	
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
 									<header class="major">
 										<h3><a href="https://github.com/ArameGueye10/Creez-et-utilisez-une-base-de-donnees-immobiliere-avec-SQL" class="link">Création et Utilisation d'une base de données immobilière</a></h3>
 										<h4><a>Projet sous PostgreSQL</a></h4>
